--- a/card-system-frontend/package.json
+++ b/card-system-frontend/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@tailwindcss/postcss": "^4.1.7",
     "@vueuse/core": "^13.2.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "element-plus": "^2.9.10",
     "pinia": "^3.0.2",
+    "postcss": "^8.5.3",
     "sortablejs": "^1.15.6",
+    "tailwindcss": "^4.1.7",
     "vue": "^3.5.13",
     "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.5.1"
@@ -22,9 +26,6 @@
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@vitejs/plugin-vue": "^5.2.3",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
     "vite": "^6.3.5"
   }
 }
