--- a/card-system/config/config.yaml
+++ b/card-system/config/config.yaml
@@ -3,11 +3,13 @@
   port: 3306
   user: root
   password: Aa123789@
-  name: card_system
+  name: cardshop
   ssl_mode: disable
 app:
   port: 8080
 jwt:
   secret: "your-secret-key-123"
 redis:
-  addr: "localhost:6379"
+  host: "localhost:6379"
+  password: ""
+  db: 0
